cambio de pagina

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/mauri
+spring.datasource.url=jdbc:postgresql://localhost:5432/headbangersCave
 spring.datasource.username=postgres
 spring.datasource.password=acdcacdc
 
