--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>mauriNetwork</groupId>
-    <artifactId>mauriPrueba</artifactId>
+    <artifactId>headbangersCave</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>mauriPrueba</name>
+    <name>headbangersCave</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
