--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.cache=false
+
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=10MB
